[package]
name = "art-rs"
version = "0.1.0"
authors = ["Igor Skokov"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lagrang/art-rs"
documentation = "https://docs.rs/art-rs"
description = "The Adaptive Radix Tree for Rust"
keywords = ["radix", "tree", "adaptive"]
categories = ["data-structures"]
include = ["src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dev-dependencies]
rand = "0.8.4"