[package]
name = "art-tree"
version = "0.1.0"
authors = ["Igor Skokov"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lagrang/art-rs"
documentation = "https://docs.rs/art-tree"
description = "The Adaptive Radix Tree"
keywords = ["radix", "tree", "adaptive"]
categories = ["data-structures"]
include = ["src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.4"

[lib]
bench = false

[[bench]]
name = "art_bench"
path = "benches/art_bench.rs"
harness = false